--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,12 +1,23 @@
-# ORACLE,MYSQL
+# \u6570\u636e\u6e90\u7c7b\u578b:\u6570\u636e\u5e93\uff0cDB\uff1bExcel\uff0cEXCEL\uff1b
+SourceType=EXCEL
+
+# \u6570\u636e\u5b57\u5178\u8def\u5f84
+path.dictionary=F:/SVN/04_\u6570\u636e\u5e93\u8bbe\u8ba1/01_\u8868\u5b9a\u4e49\u4e66/\u7cfb\u7edf(ZZ)\u8868\u7ed3\u6784\u4e00\u89c8.xlsx
+
+# \u6570\u636e\u5e93\u7c7b\u578b\uff1aOracle\uff0cORACLE\uff1bMySQL\uff0cMYSQL\uff1bPostgreSQL\uff0cPOSTGRESQL\uff1b
 DB=MYSQL
 
-MySQL.url=jdbc:mysql://192.168.0.189:3306/kunter
-MySQL.driverClass=com.mysql.jdbc.Driver
-MySQL.username=root
-MySQL.password=root
-
-Oracle.url=jdbc:oracle:thin:@192.168.0.182:1521:ORCL
+Oracle.url=jdbc:oracle:thin:@ip:prot:dbname
 Oracle.driverClass=oracle.jdbc.driver.OracleDriver
-Oracle.username=c##test
-Oracle.password=test
+Oracle.username=username
+Oracle.password=password
+
+MySQL.url=jdbc:mysql://qdm154101483.my3w.com:3306/qdm154101483_db
+MySQL.driverClass=com.mysql.jdbc.Driver
+MySQL.username=qdm154101483
+MySQL.password=Passion2015
+
+PostgreSQL.url=jdbc:postgresql://ip:prot/dbname
+PostgreSQL.driverClass=org.postgresql.Driver
+PostgreSQL.username=username
+PostgreSQL.password=password
