去除隐私信息
Signed-off-by: yangziran <ziran.yang@quantum-info.com>

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,7 +2,7 @@
 SourceType=EXCEL
 
 # \u6570\u636e\u5b57\u5178\u8def\u5f84
-path.dictionary=F:/SVN/04_\u6570\u636e\u5e93\u8bbe\u8ba1/01_\u8868\u5b9a\u4e49\u4e66/\u7cfb\u7edf(ZZ)\u8868\u7ed3\u6784\u4e00\u89c8.xlsx
+path.dictionary=
 
 # \u6570\u636e\u5e93\u7c7b\u578b\uff1aOracle\uff0cORACLE\uff1bMySQL\uff0cMYSQL\uff1bPostgreSQL\uff0cPOSTGRESQL\uff1b
 DB=MYSQL
@@ -12,10 +12,10 @@ Oracle.driverClass=oracle.jdbc.driver.OracleDriver
 Oracle.username=username
 Oracle.password=password
 
-MySQL.url=jdbc:mysql://qdm154101483.my3w.com:3306/qdm154101483_db
+MySQL.url=jdbc:mysql://ip:prot/dbname
 MySQL.driverClass=com.mysql.jdbc.Driver
-MySQL.username=qdm154101483
-MySQL.password=Passion2015
+MySQL.username=username
+MySQL.password=password
 
 PostgreSQL.url=jdbc:postgresql://ip:prot/dbname
 PostgreSQL.driverClass=org.postgresql.Driver
