--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 # \u6570\u636e\u6e90\u7c7b\u578b:\u6570\u636e\u5e93\uff0cDB\uff1bExcel\uff0cEXCEL\uff1b
-SourceType=EXCEL
+SourceType=DB
 
 # \u6570\u636e\u5b57\u5178\u8def\u5f84
 path.dictionary=
