--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,38 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>generator</name>
-	<url>http://maven.apache.org</url>
+	<name>Kunter Generator</name>
+	<url>http://generator.kunter.cn</url>
+
+	<licenses>
+		<license>
+			<name>Apache 2</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+			<comments>A business-friendly OSS license</comments>
+		</license>
+	</licenses>
+
+	<organization>
+		<name>Kunter</name>
+		<url>http://kunter.cn</url>
+	</organization>
+
+	<developers>
+		<developer>
+			<id>nature</id>
+			<name>Nature</name>
+			<email>yangzirancn@163.com</email>
+			<url>http://nature.kunter.cn</url>
+			<organization>Kunter</organization>
+			<organizationUrl>http://kunter.cn</organizationUrl>
+			<roles>
+				<role>architect</role>
+				<role>developer</role>
+			</roles>
+			<timezone>-6</timezone>
+		</developer>
+	</developers>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
