添加逻辑操作控制参数
Signed-off-by: angelsinklow <angelsinklow@163.com>

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,10 @@
-#模块名称
+#\u6a21\u5757\u540d\u79f0
 model=base
-#基础包名
+#\u57fa\u7840\u5305\u540d
 package=com.kunter
-#表名称
+#\u8868\u540d\u79f0
 table=%
-#输出目录
+#\u8f93\u51fa\u76ee\u5f55
 target=target/
+#\u662f\u5426\u903b\u8f91\u64cd\u4f5c
+logical=true
