--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,19 @@
 		</repository>
 	</repositories>
 
+	<distributionManagement>
+		<repository>
+			<id>maven.kunter.cn-releases</id>
+			<name>Kunter Nexus Release Repository</name>
+			<url>http://maven.kunter.cn/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>maven.kunter.cn-snapshots</id>
+			<name>Kunter Nexus Snapshot Repository</name>
+			<url>http://maven.kunter.cn/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<poi_version>3.12</poi_version>
