修改开发者邮箱
Signed-off-by: angelsinklow <angelsinklow@163.com>

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 		<developer>
 			<id>nature</id>
 			<name>Nature</name>
-			<email>yangzirancn@163.com</email>
+			<email>nature@kunter.cn</email>
 			<url>http://nature.kunter.cn</url>
 			<organization>Kunter</organization>
 			<organizationUrl>http://kunter.cn</organizationUrl>
