修改代码生成逻辑，变更代码生成方式支持跨模块生成
Signed-off-by: angelsinklow <angelsinklow@163.com>

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,10 +1,10 @@
-#\u6a21\u5757\u540d\u79f0
-model=base
+#\u662f\u5426\u6309\u6a21\u5757\u5206\u5272\u5305\u540d
+model=true
+#\u662f\u5426\u903b\u8f91\u64cd\u4f5c
+logical=false
 #\u57fa\u7840\u5305\u540d
-package=com.kunter
+package=cn.kunter.generator
 #\u8868\u540d\u79f0
 table=%
 #\u8f93\u51fa\u76ee\u5f55
 target=target/
-#\u662f\u5426\u903b\u8f91\u64cd\u4f5c
-logical=true
