--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.kunter.generator</groupId>
     <artifactId>kunter-generator</artifactId>
-    <version>2.0.1</version>
+    <version>3.0.0</version>
     <packaging>jar</packaging>
 
     <name>Kunter Generator</name>
@@ -42,9 +42,10 @@
 
     <repositories>
         <repository>
-            <id>maven.kunter.cn</id>
-            <name>Kunter Repository</name>
-            <url>https://maven.kunter.cn/content/groups/public/</url>
+            <id>central</id>
+            <name>aliyun Repository</name>
+            <mirrorOf>*</mirrorOf>
+            <url>https://maven.aliyun.com/repository/public</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -57,14 +58,14 @@
 
     <distributionManagement>
         <repository>
-            <id>maven.kunter.cn-releases</id>
-            <name>Kunter Nexus Release Repository</name>
-            <url>https://maven.kunter.cn/content/repositories/releases/</url>
+            <id>aliyun releases</id>
+            <name>aliyun Release Repository</name>
+            <url>https://maven.aliyun.com/repository/releases</url>
         </repository>
         <snapshotRepository>
-            <id>maven.kunter.cn-snapshots</id>
-            <name>Kunter Nexus Snapshot Repository</name>
-            <url>https://maven.kunter.cn/content/repositories/snapshots/</url>
+            <id>aliyun snapshots</id>
+            <name>aliyun Snapshot Repository</name>
+            <url>https://maven.aliyun.com/repository/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
@@ -72,14 +73,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.build.version>1.8</java.build.version>
 
-        <poi_version>3.17</poi_version>
+        <poi_version>4.1.2</poi_version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.6</version>
+            <version>2.7</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -105,7 +106,7 @@
         <dependency>
             <groupId>org.apache.xmlbeans</groupId>
             <artifactId>xmlbeans</artifactId>
-            <version>2.6.0</version>
+            <version>3.1.0</version>
             <exclusions>
                 <exclusion>
                     <artifactId>stax-api</artifactId>
@@ -116,17 +117,17 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.16</version>
+            <version>8.0.21</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.2</version>
+            <version>42.2.16</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -137,7 +138,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <source>${java.build.version}</source>
                     <target>${java.build.version}</target>
@@ -147,7 +148,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.21.0</version>
+                <version>2.22.2</version>
                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
