--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,13 +1,10 @@
-#BaseDAO\u3001BaseService\u3001BaseServiceImpl\u5305\u8def\u5f84\uff0c\u5982\u679c\u4f7f\u7528\u4e86kunter-base\u5305\u4e2d\u9700\u8981\u6309\u7167\u5982\u4e0b\u914d\u7f6e\uff0c\u5982\u679c\u81ea\u5b9a\u4e49\u751f\u6210\u5219\u4e0d\u9700\u8981\u914d\u7f6e
-#BaseDAO\uff1acn.kunter.common.base.dao.BaseDao
-#BaseService\uff1acn.kunter.common.base.service.BaseService
-#BaseServiceImpl\uff1acn.kunter.common.base.service.impl.BaseServiceImpl
+#\u57fa\u7840\u7c7b\u5305\u8def\u5f84\uff0cBaseDAO\u3001BaseService\u3001BaseServiceImpl\u7b49\u6587\u4ef6\u8f93\u51fa\u8def\u5f84
 basePackage=cn.kunter.common.base
 #\u662f\u5426\u6309\u6a21\u5757\u5206\u5272\u5305\u540d
 model=true
 #\u662f\u5426\u903b\u8f91\u64cd\u4f5c
 logical=false
-#\u57fa\u7840\u5305\u540d
+#\u5305\u8def\u5f84\u57fa\u7840\uff0c\u57fa\u4e8e\u6b64\u8def\u5f84\u548c\u6a21\u5757\u540d\u7ec4\u6210\u6587\u4ef6\u8f93\u51fa\u8def\u5f84
 package=cn.kunter
 #\u8868\u540d\u79f0
 table=%
