调整表结构一览文件格式，调整代码生成，引入lombok和MyBatis-PLUS

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,7 @@
-#\u57fa\u7840\u7c7b\u5305\u8def\u5f84\uff0cBaseDAO\u3001BaseService\u3001BaseServiceImpl\u7b49\u6587\u4ef6\u8f93\u51fa\u8def\u5f84
-basePackage=cn.kunter.common.base
+#\u57fa\u7840\u7c7b\u5305\u8def\u5f84\uff0cBaseEo\u7b49\u6587\u4ef6\u8f93\u51fa\u8def\u5f84
+basePackage=cn.kunter.common
+#\u516c\u5171\u5b57\u6bb5\uff0c\u5b9a\u4e49\u4e8eBaseEo\u4e2d\u7684
+commonFields=standby1,standby2,standby3,standby4,standby5,create_time,create_user_id,update_time,update_user_id
 #\u662f\u5426\u6309\u6a21\u5757\u5206\u5272\u5305\u540d
 model=true
 #\u662f\u5426\u903b\u8f91\u64cd\u4f5c
