格式化代码

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,14 +1,14 @@
 #\u57fa\u7840\u7c7b\u5305\u8def\u5f84\uff0cBaseEo\u7b49\u6587\u4ef6\u8f93\u51fa\u8def\u5f84
-basePackage=cn.kunter.common
+basePackage=cn.kunter.unified.platform.common
 #\u516c\u5171\u5b57\u6bb5\uff0c\u5b9a\u4e49\u4e8eBaseEo\u4e2d\u7684
-commonFields=standby1,standby2,standby3,standby4,standby5,create_time,create_user_id,update_time,update_user_id
+commonFields=
 #\u662f\u5426\u6309\u6a21\u5757\u5206\u5272\u5305\u540d
-model=true
+model=false
 #\u662f\u5426\u903b\u8f91\u64cd\u4f5c
 logical=false
 #\u5305\u8def\u5f84\u57fa\u7840\uff0c\u57fa\u4e8e\u6b64\u8def\u5f84\u548c\u6a21\u5757\u540d\u7ec4\u6210\u6587\u4ef6\u8f93\u51fa\u8def\u5f84
-package=cn.kunter
+package=cn.kunter.unified.platform.inquiry
 #\u8868\u540d\u79f0
-table=%
+table=inquiry_doctor_ident
 #\u8f93\u51fa\u76ee\u5f55
 target=target/
