--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,7 +2,7 @@
 SourceType=DB
 
 # \u6570\u636e\u5b57\u5178\u8def\u5f84
-path.dictionary=
+path.dictionary=/Users/nature/Documents/IdeaProjects/gdp-springboot/docs/\u8868\u7ed3\u6784\u4e00\u89c8.xlsm
 
 # \u6570\u636e\u5e93\u7c7b\u578b\uff1aOracle\uff0cORACLE\uff1bMySQL\uff0cMYSQL\uff1bPostgreSQL\uff0cPOSTGRESQL\uff1b
 DB=MYSQL
@@ -12,10 +12,10 @@ Oracle.driverClass=oracle.jdbc.driver.OracleDriver
 Oracle.username=username
 Oracle.password=password
 
-MySQL.url=jdbc:mysql://ip:prot/dbname
+MySQL.url=jdbc:mysql://localhost:3306/haixiang_10fyun_
 MySQL.driverClass=com.mysql.jdbc.Driver
-MySQL.username=username
-MySQL.password=password
+MySQL.username=root
+MySQL.password=1qaz2wsx
 
 PostgreSQL.url=jdbc:postgresql://ip:prot/dbname
 PostgreSQL.driverClass=org.postgresql.Driver
