--- a/kunter-generator-maven-plugin/pom.xml
+++ b/kunter-generator-maven-plugin/pom.xml
@@ -17,6 +17,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>cn.kunter</groupId>
+            <artifactId>kunter-generator-core</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>3.8.1</version>
