--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,6 +14,7 @@
 
     <modules>
         <module>kunter-generator-core</module>
+        <module>kunter-generator-test</module>
         <module>kunter-generator-maven-plugin</module>
         <module>kunter-generator-maven-plugin-test</module>
     </modules>
@@ -26,7 +26,7 @@
 
         <poi.version>5.0.0</poi.version>
         <lombok.version>1.18.20</lombok.version>
-        <log4j.version>2.14.1</log4j.version>
+        <log4j.version>2.15.0</log4j.version>
     </properties>
 
     <dependencyManagement>
