--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,9 @@
         <commons-io.version>2.11.0</commons-io.version>
         <guava.version>31.0.1-jre</guava.version>
         <poi.version>5.0.0</poi.version>
+        <fastjson.version>1.2.78</fastjson.version>
 
-        <log4j.version>2.16.0</log4j.version>
+        <log4j.version>2.17.0</log4j.version>
 
         <lombok.version>1.18.20</lombok.version>
     </properties>
@@ -71,6 +72,11 @@
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml</artifactId>
                 <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
 
             <dependency>
