--- a/kunter-generator-core/pom.xml
+++ b/kunter-generator-core/pom.xml
@@ -33,6 +33,10 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
