添加测试配置文件模板

--- a/kunter-generator-core/src/test/resources/generatorConfig.properties
+++ b/kunter-generator-core/src/test/resources/generatorConfig.properties
@@ -1,3 +1,11 @@
-SourceType = EXCEL
+# \u6570\u636E\u7C7B\u578B: EXCEL
+sourceType = EXCEL
 
-excel.filePath = /Users/nature/Documents/IdeaProjects/gdp-springboot/docs/\u8868\u7ED3\u6784\u4E00\u89C8.xlsm
+# Excel\u6587\u4EF6\u8DEF\u5F84
+excel.filePath = docs/\u8868\u7ED3\u6784\u4E00\u89C8.xlsm
+
+# \u6570\u636E\u5E93\u8FDE\u63A5\u4FE1\u606F
+db.driverClass = com.mysql.cj.jdbc.Driver
+db.url = jdbc:mysql://localhost:3306/gdp?useSSL=false
+db.username = username
+db.password = password
