--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
         <fastjson.version>1.2.78</fastjson.version>
 
         <mysql.version>8.0.27</mysql.version>
+        <postgresql.version>42.3.1</postgresql.version>
+        <oracle.version>10.2.0.4.0</oracle.version>
 
         <log4j.version>2.17.0</log4j.version>
 
@@ -85,6 +87,16 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${postgresql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.oracle</groupId>
+                <artifactId>ojdbc14</artifactId>
+                <version>${oracle.version}</version>
             </dependency>
 
             <dependency>
